# dusk-ap

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  run.bat  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.integration.test.tsx  App.test.tsx  App.tsx  main.tsx  setupTests.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/platform/: mod.rs  universal.rs  walkdir_scanner.rs  windows_mft.rs
src/components/: Breadcrumb.tsx  ContextMenu.tsx  FileList.tsx  FilterBar.test.tsx  FilterBar.tsx  SettingsPanel.tsx  ThemeProvider.tsx  Tooltip.test.tsx  Tooltip.tsx  TopFilesPanel.tsx  TreemapCanvas.tsx
src/hooks/: useFilter.ts  useScan.test.tsx  useScan.ts  useSettings.ts
src/lib/: colormap.test.ts  colormap.ts  filter.test.ts  filter.ts  format.test.ts  format.ts  treemap.test.ts  treemap.ts
src/renderer/: canvas2d.ts  index.ts  interface.ts  pixi.ts  svg.ts
src/types/: index.ts
