[package]
name = "dusk"
version = "0.1.0"
description = "Dusk desktop shell"
authors = ["sungs"]
edition = "2021"

[lib]
name = "dusk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.38.4"
rayon = "1.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation", 
  "Win32_Security",
  "Win32_UI_Shell",
  "Win32_System_IO",
  "Win32_System_Memory"
] }
